# md-reader

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  build-portable.bat  build-portable.sh  index.html  package-lock.json  package.json  release-notes-v1.1.0.md  release-notes-v1.1.1.md  vite.config.js
.github/workflows/: build.yml
public/: sample.md
scripts/: build-release.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/wix/: zh-CN.wxl
src/css/: base.css  editor.css  reader.css  scrollbar.css
src/js/: app.js  highlight.js
